The document is not tested, I am going to bed

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -9,91 +9,87 @@
 
 \chapter{Sensor server software}
 \section{Client}
-\subsection{sensor\_client.c}\label{sensor_server.c}
+\subsection*{sensor\_client.c}\label{sensor_server.c}
 	\ccode{../server/sensor_client.c}
-\subsection{sensor\_client.h}\label{sensor_server.h}
+\subsection*{sensor\_client.h}\label{sensor_server.h}
 	\ccode{../server/sensor_client.h}
-\subsection{client\_config.ini}
+\subsection*{client\_config.ini}
 	\ccode{../server/client_config.ini}
-\subsection{query\_csac.py}
+\subsection*{query\_csac.py}
 	\pythoncode{../server/query_csac.py}
 
 \section{Server}
-\subsection{sensor\_server.c}
+\subsection*{sensor\_server.c}
 	\ccode{../server/sensor_server.c}
-\subsection{sensor\_server.h}
+\subsection*{sensor\_server.h}
 	\ccode{../server/sensor_server.h}
-\subsection{config.ini}
+\subsection*{config.ini}
 	\ccode{../server/config.ini}
 
-\subsection{sensor\_server\_common.h}
+\subsection*{sensor\_server\_common.h}
 	\ccode{../server/sensor_server_common.h}
 
-\subsection{session.c}
+\subsection*{session.c}
 	\ccode{../server/session.c}
-\subsection{session.h}
+\subsection*{session.h}
 	\ccode{../server/session.h}
 
-\subsection{actions.c}
+\subsection*{actions.c}
 	\ccode{../server/actions.c}
-\subsection{actions.h}
+\subsection*{actions.h}
 	\ccode{../server/actions.h}
 
-\subsection{utils.c}
+\subsection*{utils.c}
 	\ccode{../server/utils.c}
-\subsection{utils.h}
+\subsection*{utils.h}
 	\ccode{../server/utils.h}
 
-\subsection{net.c}
+\subsection*{net.c}
 	\ccode{../server/net.c}
-\subsection{net.h}
+\subsection*{net.h}
 	\ccode{../server/net.h}
 
-\subsection{csac\_filter.c}
+\subsection*{csac\_filter.c}
 	\ccode{../server/csac_filter.c}
-\subsection{csac\_filter.h}
+\subsection*{csac\_filter.h}
 	\ccode{../server/csac_filter.h}
-\subsection{cfilter\_config.ini}
+\subsection*{cfilter\_config.ini}
 	\ccode{../server/cfilter_config.ini}
-\subsection{get\_telemetry.py}
+\subsection*{get\_telemetry.py}
 	\pythoncode{../server/get_telemetry.py}
 
-\subsection{filters.c}
+\subsection*{filters.c}
 	\ccode{../server/filters.c}
-\subsection{filters.h}
+\subsection*{filters.h}
 	\ccode{../server/filters.h}
 
-\subsection{net.c}
+\subsection*{net.c}
 	\ccode{../server/net.c}
-\subsection{net.h}
+\subsection*{net.h}
 	\ccode{../server/net.h}
 
-\subsection{gps\_serial.c}
+\subsection*{gps\_serial.c}
 	\ccode{../server/gps_serial.c}
-\subsection{serial.h}
+\subsection*{serial.h}
 	\ccode{../server/serial.h}
 
-\subsection{colors.h}
+\subsection*{colors.h}
 	\ccode{../server/colors.h}
 
-\subsection{config.h}
+\subsection*{config.h}
 	\ccode{../server/config.h}
 
-\subsection{nmea.h}
+\subsection*{nmea.h}
 	\ccode{../server/nmea.h}
 
-\subsection{protocol.h}
+\subsection*{protocol.h}
 	\ccode{../server/protocol.h}
 
-\subsection{makefile}
+\subsection*{makefile}
 	\makecode{../server/makefile}
-
-
 
 \section{Logger setup schematic}\label{CLS}
 	 \includegraphics[scale=0.5]{csac_logger.pdf}
-\section{Testing setup schematic}\label{TLS}
-	 \includegraphics[scale=0.5]{measure_setup.pdf}
 
 
 \end{appendices}
