--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -18,23 +18,18 @@ Trilateration is used in geometry as a process of determining the location (abso
 The equation is simple to solve, first we need the rate. In this context, the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. A simple and slightly inaccurate description is the signal contains a "time stamp" of when the signal was sent. By comparing this time stamp with the current time, one can calculate the age of the signal and therefore how long it has spent traveling. This is explained in greater detail under (\ref{GST}) \cite{GPSGOVTE}.  
 
 \section{Clocks}
-What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They don't stay accurate forever. This phenomena known as \textit{frequency drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart.
-\begin{wrapfigure}{c}{0.45\textwidth}
+\begin{wrapfigure}{c}{0.35\textwidth}
   \centering
-  \includegraphics[width=0.40\textwidth]{cscrystals.jpg}
+  \includegraphics[width=0.30\textwidth]{cscrystals.jpg}
   \caption[Caesium ampule]
    {High pure Caesium crystals in ampule under argon. Source: \cite{DENCES}}
 \end{wrapfigure} 
-This property is a result of how they track time. In essence, all clocks work in the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is a quartz crystal powered by a battery. The frequency of which the crystal oscillates is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. 
-Although a completely different beast, the same principles apply to the atomic clock which uses the microwave radiation that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. Bear in mind that this is of course an extremely limited explanation.
+What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They don't stay accurate forever. This phenomena known as \textit{frequency drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they track time. In essence, all clocks work in the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is a quartz crystal powered by a battery. The frequency of which the crystal oscillates is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. Although a completely different beast, the same principles apply to the atomic clock which uses the microwave radiation that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. Bear in mind that this is of course an extremely limited explanation.
 
 \section{GPS signals and Time}\label{GST}
 During the introduction of this essay the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS, it is also used for timing. The GPS satellites transmits a \textit{Coarse/Acquisition (C/A)} code and a restricted \textit{Precision (P)} code. The C/A code is freely open for everyone and is transmitted at the L1 carrier frequency (1575.42 MHz) and the P code is transmitted at both L1 and L2 (1227.60 MHz) and is reserved for the military. The C/A code is a 1023 bit pseudo random code that is transmitted at 1.023 Mbit/s, which means it repeats itself every millisecond. Each satellite transmits a different pseudo random code, codes that does not correlate well with each other. This is important because it makes it possible to separate the satellites from each other. The way the receiver calculates its position was briefly mentioned during the introduction and is better explained here. The receiver calculates the distance from itself to the satellites by comparing the pseudo random code received from the satellite with an identical one it generates itself. The receiver "slides" these codes over each other further and further until they match up. The signals travel time is determined by how far the codes had to be slided before the matched. This is what is called \textit{Code-phase GPS} and it has got some problems. Since the codes have a wide cycle width, almost a microsecond, there is a lot of slop and at the speed of light, a microsecond wrong is roughly 300 meters wrong. What many receivers do is that they start with the code-phase and moves on to using measurements based on the carrier frequency. Since the frequency is much higher, the slop decreases and the accuracy increases dramatically. This is whats known as \textit{Carrier-phase GPS}. 
 
 Alright, but what about time? We have already established that the key to GPS is measuring the travel time of a radio signal, but considering the consequences of a couple of microseconds of slack when dealing with light-speed, it is really putting some pressure on the GPS receivers internal clocks. As previously mentioned, all your receiver needs to do to find its position in a three dimensional space, is three GPS satellites. If the GPS receivers internal clocks where perfect, the three satellite ranges would intersect at a single point, your position. But in the real world our clocks is everything but perfect. One could use atomic clocks  in the receivers but that would make the receivers too expensive (even though chip scale atomic clocks (CSAC) are becoming increasingly affordable \ref{op}) for anyone to buy. The solution is to make a fourth measurement from a fourth satellite. This measurement will not intersect with the first three when using an imperfect clock. The receiver can then try to find a correction factor it can subtract from its timing measurement in order to make the measurements intersect. By doing this, it also brings the receivers clock back to sync with universal time. With the correct time, it can also make correct and precise positioning. \cite{TRIMBLETIME}
-
-\section{Phasor Measurement Units}
-An example of an application relying on GPS derived time is a PMU (phasor measurement unit).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is often obtained by using GPS. \cite{ylyl} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere and in some cases lead to whole spread blackouts \cite{EVPMUGA}.
 
 \section{Threat Models and countermeasures}
 The thread models and countermeasures presented in this paper are based on the article \textit{Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver} by L. Heng, D. Chou and G. Xingxin Gao (2012). The only exception is our proposed countermeasure under \ref{op}.
